# devbox

./: .gitattributes  .gitignore  .pyproject.toml.swp  LICENSE  Lambda Cloud API spec 1.8.3.json  README.md  blog-post.md  devenv.nix  pyproject.toml
outputs/available_only=false,command=list,resource=filesystems/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/available_only=false,command=list,resource=firewall-rulesets/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/available_only=false,command=list,resource=images/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/available_only=false,command=list,resource=instance-types/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/available_only=true,command=list,resource=images/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/command=list,resource=filesystems/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/command=list,resource=firewall-ruleset/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/command=list,resource=firewall-rulesets/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/command=list,resource=images/.hydra/: hydra.yaml  overrides.yaml
outputs/command=list,resource=instance-types/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/command=list,resource=instances/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/command=list,resource=ssh-keys/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/devbox/: __main__.py  cloud_init.py  command_base.py  commands.py  config.py
src/devbox/conf/: __init__.py  config.yaml
src/devbox/conf/api/: default.yaml
src/devbox/conf/cloud_init/: default.yaml
src/devbox/conf/command/: down.yaml  list.yaml  ssh.yaml  up.yaml  up_gh200.yaml  wait.yaml
src/devbox/conf/hydra/hydra_logging/: rich.yaml
src/devbox/conf/hydra/job_logging/: rich.yaml
src/devbox/conf/ssh/: default.yaml
src/devbox/conf/wait/: default.yaml
src/devbox/templates/: __init__.py  cloud-init.yaml.j2  ssh-config.j2
src/lambdalabs/: __init__.py  client.py  models.py
src/lambdalabs/data/: __init__.py  openapi-spec.json
